[gd_scene load_steps=37 format=2]

[ext_resource path="res://Voicelines/Mackenzie_Encounter_Line1.mp3" type="AudioStream" id=1]
[ext_resource path="res://Voicelines/Mackenzie_Encounter_Line2.mp3" type="AudioStream" id=2]
[ext_resource path="res://Voicelines/Mackenzie_Encounter_Line3.mp3" type="AudioStream" id=3]
[ext_resource path="res://Voices.gd" type="Script" id=4]
[ext_resource path="res://Voicelines/Michelle_Lines 4.wav" type="AudioStream" id=5]
[ext_resource path="res://Voicelines/Michelle_Lines 5.wav" type="AudioStream" id=6]
[ext_resource path="res://Voicelines/Michelle_Lines 6.wav" type="AudioStream" id=7]
[ext_resource path="res://Voicelines/Michelle_Lines 3.wav" type="AudioStream" id=8]
[ext_resource path="res://Voicelines/Michelle_Lines 2.wav" type="AudioStream" id=9]
[ext_resource path="res://Voicelines/Michelle_Line 1.wav" type="AudioStream" id=10]
[ext_resource path="res://Voicelines/Michelle_Lines Sequence.wav" type="AudioStream" id=11]
[ext_resource path="res://Voicelines/Michelle_Lines 8.wav" type="AudioStream" id=12]
[ext_resource path="res://Voicelines/Michelle_Lines 7.wav" type="AudioStream" id=13]
[ext_resource path="res://Voicelines/IMG_8427.mp3" type="AudioStream" id=14]
[ext_resource path="res://Voicelines/IMG_8437.mp3" type="AudioStream" id=15]
[ext_resource path="res://Voicelines/IMG_8438.mp3" type="AudioStream" id=16]
[ext_resource path="res://Voicelines/IMG_8440.mp3" type="AudioStream" id=17]
[ext_resource path="res://Voicelines/Mackenzie_2 Line 2.wav" type="AudioStream" id=18]
[ext_resource path="res://Voicelines/Mackenzie_2 Line 4.wav" type="AudioStream" id=19]
[ext_resource path="res://Voicelines/Mackenzie 2 Line 1.wav" type="AudioStream" id=20]
[ext_resource path="res://Voicelines/Mackenzie_2 Line 3.wav" type="AudioStream" id=21]
[ext_resource path="res://Voicelines/Mackenzie_2 Line 5.wav" type="AudioStream" id=22]
[ext_resource path="res://Voicelines/Bamm_Line 1.wav" type="AudioStream" id=23]
[ext_resource path="res://Voicelines/Bamm_Line 4.wav" type="AudioStream" id=24]
[ext_resource path="res://Voicelines/Bamm_Line 2.wav" type="AudioStream" id=25]
[ext_resource path="res://Voicelines/Bamm_Line 3.wav" type="AudioStream" id=26]
[ext_resource path="res://Voicelines/Bamm Line 3.5.wav" type="AudioStream" id=27]
[ext_resource path="res://Voicelines/Mackenzie_3 Line 5.wav" type="AudioStream" id=28]
[ext_resource path="res://Voicelines/Mackenzie_3 Line 6.wav" type="AudioStream" id=29]
[ext_resource path="res://Voicelines/Mackenzie_3 Line 9.wav" type="AudioStream" id=30]
[ext_resource path="res://Voicelines/Mackenzie_3 Line 2.wav" type="AudioStream" id=31]
[ext_resource path="res://Voicelines/Mackenzie_3 Line 4.wav" type="AudioStream" id=32]
[ext_resource path="res://Voicelines/Mackenzie_3 Line 1.wav" type="AudioStream" id=33]
[ext_resource path="res://Voicelines/Mackenzie_3 Line 7.wav" type="AudioStream" id=34]
[ext_resource path="res://Voicelines/Mackenzie_3 Line 3.wav" type="AudioStream" id=35]
[ext_resource path="res://Voicelines/Mackenzie_3 Line 8.wav" type="AudioStream" id=36]

[node name="Voices" type="Node2D"]
script = ExtResource( 4 )

[node name="MackenzieVoiceline1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="MackenzieVoiceline2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="MackenzieVoiceline3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="MichelleVoiceline1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="MichelleVoiceline2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="MichelleVoiceline3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="MichelleVoiceline4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="MichelleVoiceline6" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="MichelleVoiceline7" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="MichelleVoiceline5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="MichelleVoiceline8" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="MichelleVoiceline9" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="ColinVoiceline1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="ColinVoiceline2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="ColinVoiceline3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="ColinVoiceline4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="MackenzieVoiceline4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[node name="MackenzieVoiceline5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="MackenzieVoiceline6" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )

[node name="MackenzieVoiceline7" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )

[node name="MackenzieVoiceline8" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )

[node name="MackenzieVoicelineStart" type="AudioStreamPlayer" parent="."]

[node name="BammVoiceline1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )

[node name="BammVoiceline2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )

[node name="BammVoiceline3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )

[node name="BammVoiceline4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 27 )

[node name="BammVoiceline5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )

[node name="MackenzieVoiceline9" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 33 )

[node name="MackenzieVoiceline10" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 31 )

[node name="MackenzieVoiceline11" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 35 )

[node name="MackenzieVoiceline12" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 32 )

[node name="MackenzieVoiceline13" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 28 )

[node name="MackenzieVoiceline14" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 29 )

[node name="MackenzieVoiceline15" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 34 )

[node name="MackenzieVoiceline16" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 36 )

[node name="MackenzieVoiceline17" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 30 )
